@@ -43,6 +43,7 @@ Release 0.20.3 - Unreleased
    HBASE-2046  Remove CompactionLimitThread
    HBASE-2052  Make hbase more 'live' when comes to noticing table creation, 
                splits, etc., for 0.20.3
+   HBASE-2049  Cleanup HLog binary log output (Dave Latham via Stack)
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
